--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,7 @@ include_directories("${PROJECT_SOURCE_DIR}/include")
 
 add_subdirectory(lib)
 add_subdirectory(src)
+
+add_custom_target(check
+    COMMAND ${PROJECT_SOURCE_DIR}/external/src/llvm-9.0.0.src/build/bin/llvm-lit -sv ${PROJECT_SOURCE_DIR}/test/
+)
