--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_subdirectory(src)
 add_custom_target(check
     COMMAND ${PROJECT_SOURCE_DIR}/external/src/llvm-9.0.0.src/build/bin/llvm-lit -sv ${PROJECT_SOURCE_DIR}/test/
 )
+add_dependencies(check tsugu)
