--- a/external/Makefile
+++ b/external/Makefile
@@ -28,6 +28,8 @@ $(LLVM_SRC_DIR)/build/CMakeCache.txt: $(LLVM_SRC_DIR)
 			-DLLVM_BUILD_BENCHMARKS=OFF \
 			-DLLVM_INCLUDE_BENCHMARKS=OFF \
 			-DLLVM_BUILD_LLVM_DYLIB=ON \
+			-DLLVM_INCLUDE_UTILS=ON \
+			-DLLVM_INSTALL_UTILS=ON \
 			..
 
 $(LLVM_SRC_DIR): $(LLVM_TAR_FILE)
