refactor directory structure

--- a/src/tsugu/CMakeLists.txt
+++ b/src/tsugu/CMakeLists.txt
@@ -1,17 +1,3 @@
 add_subdirectory(core)
 add_subdirectory(engine)
-
-link_directories("${LLVM_LIBDIR}")
-
-add_executable(tsugu
-  tsugu.c
-)
-target_link_libraries(tsugu
-  core
-  engine
-  ${LLVM_LIBS}
-)
-
-install(TARGETS tsugu
-  RUNTIME DESTINATION bin
-)
+add_subdirectory(tools)
