--- a/src/tsugu/engine/CMakeLists.txt
+++ b/src/tsugu/engine/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(SYSTEM "${LLVM_INCLUDE_DIR}")
 
-add_library(engine
+add_library(tsugu_engine
   compiler.cpp
   engine.cpp
   function_table.cpp
