--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,8 @@
 /external/*
 !/external/Makefile
 
-/.vscode/
-
-# Swap
-[._]*.s[a-v][a-z]
-[._]*.sw[a-p]
-[._]s[a-rt-v][a-z]
-[._]ss[a-gi-z]
-[._]sw[a-p]
+.*
+!.clang-format
+!.dockerignore
+!.gitignore
+!.gitkeep
