--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
     - external
 install:
   - cd external
-  - timeout 60 make
+  - timeout 60 make || true
 script:
   - mkdir build
   - cd build
