use frame object

--- a/src/tsugu/core/CMakeLists.txt
+++ b/src/tsugu/core/CMakeLists.txt
@@ -6,9 +6,11 @@ include_directories("${PROJECT_SOURCE_DIR}/src")
 add_library(tsugu_core
   ast.c
   error.c
+  frame.c
   parser.c
   resolver.c
   scanner.c
+  scope.c
   symtbl.c
   token.c
   tyenv.c
